# compose

./: README.md  compose.opam  dune-project
examples/: invent1_simplif.mid  invent5_simplif.mid  test.mid
lib/: clflags.ml  clflags.mli  dune  event.ml  event.mli  extend_Mm.ml  extend_Mm.mli  interval_sequence.ml  interval_sequence.mli  llama_midi.ml  llama_midi.mli  print_Mm.ml  print_Mm.mli  rand.ml  rand.mli  speac.ml  speac.mli
test/: README.md  bwv772.mid  cope.ml  dune  midi_files.ml
